# toolregistry-server

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  notify-downstream.yml  upstream-compat.yml
docs/: changelog.md  ecosystem.md  index.md
docs/adapters/: index.md  mcp.md  openapi.md
docs/api/: auth.md  index.md  mcp.md  openapi.md
docs/api/core/: route_table.md
docs/cli/: index.md
docs/usage/: authentication.md  configuration.md  installation.md  quickstart.md
examples/: README.md  config.jsonc  mcp_server.py  openapi_server.py  tools.py
src/toolregistry_server/: __init__.py  _structlog.py  route_table.py  session.py
src/toolregistry_server/auth/: __init__.py
src/toolregistry_server/cli/: __init__.py  mcp.py  openapi.py
src/toolregistry_server/mcp/: __init__.py  adapter.py  server.py
src/toolregistry_server/openapi/: __init__.py  adapter.py  middleware.py
tests/: __init__.py  test_auth.py  test_cli.py  test_mcp_adapter.py  test_mcp_session.py  test_openapi_adapter.py  test_route_table.py  test_session.py
