[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolregistry-server"
dynamic = ["version"]
description = "Define custom tools and serve them via OpenAPI or MCP interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Oaklight", email = "pding.sam@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
keywords = [
    "toolregistry",
    "mcp",
    "openapi",
    "fastapi",
    "server",
    "llm",
    "tools",
]
dependencies = ["toolregistry>=0.6.0", "loguru>=0.7.0", "python-dotenv>=1.0.0"]

[project.optional-dependencies]
openapi = ["fastapi>=0.119.0", "uvicorn[standard]>=0.24.0"]
mcp = ["mcp>=1.8.0"]
all = ["toolregistry-server[openapi]", "toolregistry-server[mcp]"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "ty>=0.0.21",
    "build>=1.2.0",
    "twine>=6.1.0",
]

[project.scripts]
toolregistry-server = "toolregistry_server.cli:main"

[project.urls]
Documentation = "https://toolregistry-server.readthedocs.io"
Repository = "https://github.com/Oaklight/toolregistry-server"
Issues = "https://github.com/Oaklight/toolregistry-server/issues"
Changelog = "https://github.com/Oaklight/toolregistry-server/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "toolregistry_server.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"toolregistry_server" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
